<resources>
    <string name="app_name">PersonasMaterialDiplomado</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="crear">Crear Personas</string>

    <string name="mensaje_guardado">Persona Guardada Exitosamente!</string>
    <string name="cedula">Cédula</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar a esta persona?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="no_vacio_error">Este campo no puede estar vacío</string>
    <string name="persona_existente_error">Ya existe una persona ingresada con esta cédula</string>
    <string name="modificar_persona">Modificar Persona</string>
    <string name="cancelar">Cancelar</string>
    <string name="existe_persona">La persona ya esta registrada</string>
    <string name="mensaje_exito_modificar"> Persona Modificada</string>
    <string name="error_modificar">Error al Modificar</string>
    <string name="mensaje_seleccion">Selecciones una imagen</string>
    <string name="id_banner_admob">ca-app-pub-7003300354423036/9219509661</string>
    <string name="id_banner_inter">ca-app-pub-7003300354423036/3011170445</string>
    <string name="id_banner_video">ca-app-pub-7003300354423036/6699134018</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="log_in">LogIn</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="mensaje_cuenta_creada_exitosamente">Cuenta Creada Exitosamente</string>
    <string name="persona">Principal</string>
    <string name="action_salir">Salir</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">cerrar</string>
</resources>
